# CPP-ASCON

./: CMakeLists.txt  README.md  ascon-hash.cpp  ascon-hash.h  ascon-hasha.cpp  ascon-hasha.h  ascon-util.cpp  ascon-util.h  ascon.h  ascon128.cpp  ascon128.h  ascon128a.cpp  ascon128a.h  ascon80pq.cpp  ascon80pq.h  main.cpp
